# SpeechToText-macOS

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_app.py
.github/workflows/: build.yml
speechtotext/: __init__.py  __main__.py  editor.py  main.py  recorder.py  settings.py  transcriber.py
