[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speechtotext"
version = "1.0.0"
description = "Voxtral-powered speech-to-text for macOS menu bar"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "rumps>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
]

[project.scripts]
speechtotext = "speechtotext.main:main"
